--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
-}
+/* App.css */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f0f0f0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  /* background-color: #333; */
+  background-color: black;
+}
+
+h1 {
   color: white;
+  margin-top: 60px;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  border: none;
+  padding: 10px 20px;
+  margin: 5px;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+.naver {
+  color: white;
+  background-color: green;
+  font-size: 30px;
+}
+
+.kakao {
+  color: black;
+  background-color: yellow;
+  font-size: 30px;
+}
+
+.google {
+  color: white;
+  background-color: #0056b3;
+  font-size: 30px;
+}
+
+button:hover {
+  /* background-color: #0056b3; */
+  scale: 1.1;
+}
+
+.wrapper {
+  margin-top: 50px;
+  overflow: hidden;
+  border-radius: 50%;
+  width: 420px;
+  height: 420px;
+}
+
+.pedro {
+  scale: 1.1;
+}
+
+@keyframes bounce {
   to {
-    transform: rotate(360deg);
+    translate: 0 20px;
   }
+}
+.pedro {
+  animation: bounce 200ms linear infinite alternate;
+}
+
+@keyframes spin {
+  to {
+    rotate: -1turn;
+  }
+}
+.wrapper {
+  animation: spin 10s linear infinite;
 }
